# freamon

./: .gitignore  CHANGELOG.md  CLAUDE.md  DATATYPE_FIX_README.md  DEV_GUIDE.md  EDA_FIX_README.md  FLAG_SIMILAR_RECORDS_GUIDE.md  FLAG_SIMILAR_RECORDS_PARAMETERS.md  LIGHTGBM_TUNING.md  LSH_DEDUPLICATION.md  NEXT_STEPS.md  OPTIMIZATION_GUIDE.md  QUICK_START.md  README.md  README_ADVANCED_EDA.md  README_AUTO_MODEL.md  README_AUTO_SPLIT.md  README_AUTO_TEXT_DETECTION.md  README_DATATYPE_FIX.md  README_DEDUPLICATION.md  README_DEDUPLICATION_TRACKING.md  README_ENHANCED_REPORTING.md  README_EXAMPLES.md  README_EXPORT.md  README_FIX.md  README_FLAG_SIMILAR_RECORDS_LSH.md  README_JUPYTER_DISPLAY.md  README_LSH_DEDUPLICATION.md  README_MARKDOWN_REPORTS.md  README_POLARS_DEDUPLICATION.md  README_SUPERVISED_DEDUPLICATION.md  ROADMAP.md  accordion_test.html  auto_model_plot_test.py  auto_model_test.py  build_and_upload.py  complex_currency_test.py  configure_matplotlib_for_currency.py  currency_display_test.py  datatype_detection_report.html  (+52 more)
.github/workflows/: test.yml
dist_latest/: freamon-0.3.16-py3-none-any.whl  freamon-0.3.17-py3-none-any.whl  freamon-0.3.18-py3-none-any.whl  freamon-0.3.20-py3-none-any.whl  freamon-0.3.21-py3-none-any.whl  freamon-0.3.22-py3-none-any.whl  freamon-0.3.28-py3-none-any.whl  freamon-0.3.32-py3-none-any.whl  freamon-0.3.33-py3-none-any.whl
docs/usage/: anonymization_integration.md  automated_modeling.md  automated_pipeline.md  cross_validation.md  data_drift.md  data_type_detection.md  encoders.md  explainability.md  feature_selection.md  large_dataset_handling.md  markdown_reports.md  multivariate_analysis.md  optimized_topic_modeling.md  pipeline.md  pipeline_visualization.md  shapiq.md  split_eda_reports.md  text_analytics.md  threshold_optimization.md  time_series_features.md  word_embeddings.md
examples/: README_EXAMPLE_SUMMARY.md  README_TRACKER_DEVELOPMENT.md  advanced_deduplication_tracking.py  advanced_lightgbm_pipeline.py  anonymization_deduplication_example.py  anonymized_topic_modeling_example.py  australian_data_example.py  australian_data_patterns_example.py  auto_text_detection_example.py  auto_topic_detection_example.py  automated_end_to_end_pipeline.py  automated_modeling_workflow_example.py  big_data_deduplication_example.py  calibration_and_importance_example.py  category_encoders_example.py  cross_validation_training_example.py  custom_semantic_types_example.py  cv_encoders_example.py  data_type_detection_example.py  dataframe_topic_modeling_example.py  datatype_detection_eda_workflow.py  datatype_detector_example.py  datatype_report_example.py  datatype_special_chars_example.py  deduplication_reporting_example.py  deduplication_tracking_example.py  drift_and_visualization_example.py  eda_performance_test.py  eda_report_test_suite.py  eda_split_reports_example.py  eda_with_currency.py  empty_weights_example.py  enhanced_deduplication_reporting_example.py  excel_date_detection_example.py  feature_selection_example.py  jupyter_export_example.py  large_dataset_eda_example.py  large_dataset_handling_example.py  lightgbm_custom_model_example.py  lightgbm_custom_objectives_example.py  (+29 more)
examples/deduplication_demo/: performance_benchmark.py
freamon/: __init__.py
freamon/data_quality/: __init__.py  analyzer.py  cardinality.py  drift.py  duplicates.py  missing_values.py  outliers.py
freamon/deduplication/: __init__.py  blocking.py  clustering.py  (+8 more)
tests/: test_allyanonimiser_integration.py  test_australian_data_patterns.py  test_auto_text_detection.py  test_auto_topic_detection.py  test_cv_trainer.py  test_data_drift.py  test_data_quality.py  test_data_quality_cardinality.py  test_data_quality_duplicates.py  test_datatype_detector.py  test_datatype_detector_performance.py  test_date_autodetection.py  test_deduplication_examples.py  test_deduplication_tracker.py  test_deduplication_tracking_integration.py  test_display_report.py  test_early_stopping.py  test_eda.py  test_eda_markdown_report.py  test_eda_type_detection.py  test_empty_weights.py  test_enhanced_reporting.py  test_explainability.py  test_feature_importance.py  test_flag_duplicates.py  test_html_report_generation.py  test_index_tracker.py  test_index_tracking_pipeline.py  test_lightgbm_tuning.py  test_model_feature_mismatch.py  test_model_selection.py  test_model_selection_imports.py  test_modeling.py  test_multivariate.py  test_optimized_topic_modeling.py  test_pipeline.py  test_pipeline_visualization.py  test_shapiq_engineer.py  test_topic_modeling.py  test_utils.py  (+6 more)
(+54 files in other folders)
