[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "freamon"
version = "0.2.2"
description = "A package to make data science projects on tabular data easier"
readme = "README.md"
authors = [
    {name = "Freamon Team"}
]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "matplotlib",
    "seaborn",
    "joblib",
    "category_encoders",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "mypy",
    "isort",
    "flake8",
]
all = [
    "lightgbm",
    "xgboost",
    "catboost",
    "spacy",
    "polars",
    "dask[dataframe]",
    "shapiq",
    "shap",
]
lightgbm = [
    "lightgbm",
]
xgboost = [
    "xgboost",
]
catboost = [
    "catboost",
]
nlp = [
    "spacy",
]
polars = [
    "polars",
]
dask = [
    "dask[dataframe]",
]
explainability = [
    "shapiq",
    "shap",
]

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
addopts = ""